Minor cleanup: edition + readme
Change edition to 2018, minor code changes.

Add instructions on how to run the example, note that it is currently not working for me:

HERE 2
HERE 3
HERE 4
Segmentation fault: 11

Since this is WIP I assume that the example is not working for other
people.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "Rust bindings for darknet"
 license = "MIT"
 readme = "README.md"
 keywords = ["darknet", "cnn", "neural network"]
+edition = "2018"
 
 [dependencies]
 libc = "0.2"
