--- a/darknet-sys/Cargo.toml
+++ b/darknet-sys/Cargo.toml
@@ -6,6 +6,7 @@ description = "Native rust bindings for darknet"
 license = "MIT"
 readme = "README.md"
 keywords = [ "ffi", "darknet" ]
+edition = "2018"
 
 build = "build.rs"
 links = "darknet"
